--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.21.5",
     "babel-loader": "^9.1.2",
+    "firebase": "^9.22.0",
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
