--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
-  "name": "photoproject",
+  "name": "photoproject-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.mjs",
   "scripts": {
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --open"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/preset-env": "^7.21.5",
-    "babel-loader": "^9.1.2",
     "firebase": "^9.22.0",
-    "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
-  },
-  "devDependencies": {
-    "css-loader": "^6.7.4",
-    "style-loader": "^3.3.3"
+    "webpack-cli": "^5.1.1"
   }
 }
